syntax = "proto3";
package osmosis.mint.v1beta1;

option go_package = "github.com/osmosis-labs/osmosis/v14/x/mint/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

// Minter represents the minting state.
message Minter {
  // epoch_provisions represent rewards for the current epoch.
  string epoch_provisions = 1 [
    (gogoproto.moretags) = "yaml:\"epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// WeightedAddress represents an address with a weight assigned to it.
// The weight is used to determine the proportion of the total minted
// tokens to be minted to the address.
message WeightedAddress {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  string weight = 2 [
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// DistributionProportions defines the distribution proportions of the minted
// denom. In other words, defines which stakeholders will receive the minted
// denoms and how much.
message DistributionProportions {
  // staking defines the proportion of the minted mint_denom that is to be
  // allocated as staking rewards.
  string staking = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"staking\"",
    (gogoproto.nullable) = false
  ];
  // pool_incentives defines the proportion of the minted mint_denom that is
  // to be allocated as pool incentives.
  string pool_incentives = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"pool_incentives\"",
    (gogoproto.nullable) = false
  ];
  // developer_rewards defines the proportion of the minted mint_denom that is
  // to be allocated to developer rewards address.
  string developer_rewards = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"developer_rewards\"",
    (gogoproto.nullable) = false
  ];
  // community_pool defines the proportion of the minted mint_denom that is
  // to be allocated to the community pool.
  string community_pool = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
}

// Params holds parameters for the x/mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // mint_denom is the denom of the coin to mint.
  string mint_denom = 1;
  // genesis_epoch_provisions epoch provisions from the first epoch.
  string genesis_epoch_provisions = 2 [
    (gogoproto.moretags) = "yaml:\"genesis_epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // epoch_identifier mint epoch identifier e.g. (day, week).
  string epoch_identifier = 3
      [ (gogoproto.moretags) = "yaml:\"epoch_identifier\"" ];
  // reduction_period_in_epochs the number of epochs it takes
  // to reduce the rewards.
  int64 reduction_period_in_epochs = 4
      [ (gogoproto.moretags) = "yaml:\"reduction_period_in_epochs\"" ];
  // reduction_factor is the reduction multiplier to execute
  // at the end of each period set by reduction_period_in_epochs.
  string reduction_factor = 5 [
    (gogoproto.moretags) = "yaml:\"reduction_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // distribution_proportions defines the distribution proportions of the minted
  // denom. In other words, defines which stakeholders will receive the minted
  // denoms and how much.
  DistributionProportions distribution_proportions = 6
      [ (gogoproto.nullable) = false ];
  // weighted_developer_rewards_receivers is the address to receive developer
  // rewards with weights assignedt to each address. The final amount that each
  // address receives is: epoch_provisions *
  // distribution_proportions.developer_rewards * Address's Weight.
  repeated WeightedAddress weighted_developer_rewards_receivers = 7 [
    (gogoproto.moretags) = "yaml:\"developer_rewards_receiver\"",
    (gogoproto.nullable) = false
  ];
  // minting_rewards_distribution_start_epoch start epoch to distribute minting
  // rewards
  int64 minting_rewards_distribution_start_epoch = 8
      [ (gogoproto.moretags) =
            "yaml:\"minting_rewards_distribution_start_epoch\"" ];
}
